@@ -2,6 +2,7 @@
 Version: 5.2.7
 Date: ????
   Changes:
+    - Made displayed columns and rows adjustable again. Columns are restricted from 5 to 40 in increments of 5
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.6
 Date: 2020-10-27
